[package]
name = "orxnre"
version = "0.3.0"
edition = "2021"
authors = ["Xnye"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
colored = "2.0.4"
console = "0.15.7"
noise = "0.9.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.1.6"